--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
 <body>
   <!-- HEADER -->
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary text-light">
+    <nav class="navbar navbar-expand-lg bg-dark text-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand border border-primary mx-5" href="#">
+          <img src="assets/logo.png">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-collapse border border-primary" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -45,9 +47,13 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#">Disabled</a>
             </li>
           </ul>
+        </div>
+        <div class="nav-btn border border-primary">
+          <button type="button" class="btn btn-primary" id="btn-login">Login</button>
+          <button type="button" class="btn btn-outline-light" id="btn-login">Sign up</button>
         </div>
       </div>
     </nav>
